Wed, 19 Mar 2008 15:45:15 +0100 <thp@perli.net>
Patch from Nikosapi to fix MP3 player sync progress

	* src/gpodder/sync.py: Patch from Nick (nikosapi.org) to fix MP3
	player sync problems: "Instead of displaying the proper percentage of
	the copied file in the FS-based sync dialog, gPodder would initially
	report 100% and near the end of the copy it would report percentages
	>100%."

Wed, 19 Mar 2008 15:02:10 +0100 <thp@perli.net>
Various Bluetooth-related fixes

	* data/gpodder.glade: Use the "bluetooth" icon instead of the (old?)
	"stock_bluetooth" icon; in Gnome 2.22, the "bluetooth" icon is nicer,
	i.e. more Tango-ish than the "stock_bluetooth" icon
	* src/gpodder/gui.py: Fix a logging error; Only show "Send to [...]
	via bluetooth"/"Send to bluetooth device" when we have already
	downloaded the episodes (won't obviously work otherwise..)
	* src/gpodder/util.py: Fix bluetooth_send_file to work with both
	bluetooth-sendto and gnome-obex-send (different command line argument
	format for both)

Sun, 16 Mar 2008 12:55:49 +0100 <thp@perli.net>
Python-feedparser is a dependency, so mention it in the README

	* README: Mention python-feedparser as a dependency in the README
	file; thanks to Alain Tauch for pointing this out on the mailing list

Wed, 12 Mar 2008 12:38:19 +0100 <thp@perli.net>
Updated translations for 0.11.1 stabilization period

	* data/messages.pot: Updated from source
	* data/po/*.po: Updated from messages.pot

Tue, 11 Mar 2008 18:53:25 +0100 <thp@perli.net>
Add option to write gtkpod extended database on sync

	* data/gpodder.glade: Add a check box for the new config option
	* src/gpodder/config.py: Add ipod_write_gtkpod_extended boolean
	configuration variable that controls if we want to write iTunesDB.ext
	after synchronization (defaults to False)
	* src/gpodder/gui.py: Glue code for UI<->Config manager
	* src/gpodder/sync.py: Use libgpod's "gtkpod" module to write the
	extended gtkpod database (iTunesDB.ext) to the iPod after sync - this