@@ -1,3 +1,11 @@
+Wed, 19 Mar 2008 18:06:58 +0100 <thp@perli.net>
+Change the context menu of the episode list popup menu
+
+	* src/gpodder/gui.py: Simplify, re-structure and improve the context
+	menu of the episode list popup menu (right-click menu); thanks to hex
+	(justin.forest gmail.com) for suggesting this change and giving
+	valuable input on gpodder-devel
+
 Wed, 19 Mar 2008 15:45:15 +0100 <thp@perli.net>
 Patch from Nikosapi to fix MP3 player sync progress
 
